--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
 			"Kartenmacherei\\RestFramework\\": "src",
 			"Kartenmacherei\\ExampleService\\": "example/src"
 		}
+	},
+	"require": {
+		"phpunit/phpunit": "^5.5.0"
 	}
 }
