--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,10 @@
         <directory suffix="Test.php">tests/Unit</directory>
     </testsuite>
 
+    <logging>
+        <log type="coverage-html" target="./build/coverage" lowUpperBound="35" highLowerBound="70"/>
+    </logging>
+
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
