add package information to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+	"name": "kartenmacherei/rest-framework",
+	"description": "Micro framework for creating RESTful webservices",
+	"version": "0.1.0",
+	"type": "library",
+	"keywords": ["framework", "rest", "restful", "kartenmacherei"],
+	"homepage": "https://bitbucket.org/kartenmacherei/rest-framework",
+	"license": "MIT",
+	"authors": [],
 	"autoload": {
 		"psr-4": {
 			"Kartenmacherei\\RestFramework\\": "src",
