remove example code (moved to another repository)

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,7 @@
 	"authors": [],
 	"autoload": {
 		"psr-4": {
-			"Kartenmacherei\\RestFramework\\": "src",
-			"Kartenmacherei\\ExampleService\\": "example/src"
+			"Kartenmacherei\\RestFramework\\": "src"
 		}
-	},
-	"require": {
-		"phpunit/phpunit": "^5.5.0"
 	}
 }
