--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,15 @@ language: php
 
 before_install:
   - composer self-update
-  - composer global require phpunit/phpunit
+  - wget https://phar.io/releases/phive.phar
+  - wget https://phar.io/releases/phive.phar.asc
+  - gpg --keyserver hkps.pool.sks-keyservers.net --recv-keys 0x9B2D5D79
+  - gpg --verify phive.phar.asc phive.phar
+  - chmod +x phive.phar
+  - sudo mv phive.phar /usr/bin/phive
 
 install:
+  - ant setup
   - travis_retry composer install --no-interaction --prefer-source
 
 script: phpunit
