--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - sudo mv phive.phar /usr/bin/phive
 
 install:
+  - ant setup
   - travis_retry composer install --no-interaction --prefer-source
 
 script: phpunit
