--- a/composer.json
+++ b/composer.json
@@ -31,15 +31,6 @@
 	},
 	"require": {
 		"php" : ">=7.0.0",
-		"kartenmacherei/kam-newrelic": "dev-master"
-	},
-	"repositories": [
-		{
-			"type": "vcs",
-			"url": "git@bitbucket.org:kartenmacherei/kam-newrelic.git"
-		}
-	],
-	"require-dev": {
-		"phpunit/phpunit": "6.0"
+		"kartenmacherei/kam-newrelic": "^1.0"
 	}
 }
