--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,11 @@ language: php
 
 before_install:
   - composer self-update
-  - wget https://phar.io/releases/phive.phar
-  - wget https://phar.io/releases/phive.phar.asc
-  - gpg --keyserver hkps.pool.sks-keyservers.net --recv-keys 0x9B2D5D79
-  - gpg --verify phive.phar.asc phive.phar
-  - chmod +x phive.phar
-  - sudo mv phive.phar /usr/bin/phive
 
 install:
-  - ant setup
   - travis_retry composer install --no-interaction --prefer-source
 
-script: tools/phpunit
+script: vendor/bin/phpunit
 
 php:
   - 7.0
