--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
 		}
 	},
 	"require": {
-		"php" : ">=7.0.0"
+		"php" : ">=7.0.0",
+		"kartenmacherei/kam-newrelic": "^1.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^6.3"
 	}
 }
